--- a/sass/pages/home-page/components/_heading.scss
+++ b/sass/pages/home-page/components/_heading.scss
@@ -40,7 +40,7 @@
 
 .heading-huge-2 {
   color: $color-white;
-  font-size: 4.75rem;
+  font-size: 4.25rem;
   letter-spacing: .7rem;
   text-transform: uppercase;
   text-align: center;
@@ -78,7 +78,7 @@
 .heading-big {
   font-size: 3.7rem;
   color: $color-gray-medium;
-  padding: 2.8rem;
+  padding-top: 2.8rem;
   text-transform: uppercase;
   text-align: center;
   z-index: 9999;
