--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ body {
 
 .heading-huge-2 {
   color: #fff;
-  font-size: 4.75rem;
+  font-size: 4.25rem;
   letter-spacing: .7rem;
   text-transform: uppercase;
   text-align: center;
@@ -105,7 +105,7 @@ body {
 .heading-big {
   font-size: 3.7rem;
   color: #4f4f4f;
-  padding: 2.8rem;
+  padding-top: 2.8rem;
   text-transform: uppercase;
   text-align: center;
   z-index: 9999; }
@@ -346,9 +346,9 @@ body {
   background-color: #e0e0e0;
   margin: 0 auto; }
   .short-explain__text {
-    font-size: 3rem;
+    font-size: 2.5rem;
     line-height: 1.4;
-    padding: 5rem 15rem;
+    padding: 2.75rem 15rem;
     text-align: justify; }
 
 .research-products {
