--- a/sass/pages/home-page/components/_heading.scss
+++ b/sass/pages/home-page/components/_heading.scss
@@ -2,10 +2,10 @@
 .heading-huge {
   width: max-content;
   color: $color-white;
-  font-size: 6rem;
-  letter-spacing: 1rem;
+  font-size: 4.5rem;
+  letter-spacing: 1.7rem;
   text-transform: uppercase;
-  margin-bottom: 2rem;
+  //margin-bottom: 2rem;
   animation: inDownUp .5s ease-in .7s;
   animation-fill-mode: backwards;
 
@@ -26,38 +26,40 @@
   }
 
   @include respond(tab-land) {
-    font-size: 5.5rem;
+    letter-spacing: 1.2rem;
   }
-
-  @include respond(tab-port) {
-    font-size: 4rem;
-  }
-
-  @include respond(phone) {
-    font-size: 3rem;
-  }
+  //
+  //@include respond(tab-port) {
+  //  font-size: 3.5rem;
+  //}
+  //
+  //@include respond(phone) {
+  //  font-size: 3rem;
+  //}
 }
 
 .heading-huge-2 {
   color: $color-white;
-  font-size: 4.25rem;
+  font-size: 3rem;
+  font-weight: 400;
   letter-spacing: .7rem;
   text-transform: uppercase;
+  margin-top: 2.75rem;
   text-align: center;
   animation: inDownUp .5s ease-in .7s;
   animation-fill-mode: backwards;
 
-  @include respond(tab-land) {
-    font-size: 3.75rem;
-  }
-
+  //@include respond(tab-land) {
+  //  font-size: 2.75rem;
+  //}
+  //
   @include respond(tab-port) {
-    font-size: 3rem;
+    margin-top: 1.75rem;
   }
-
-  @include respond(phone) {
-    font-size: 2.5rem;
-  }
+  //
+  //@include respond(phone) {
+  //  font-size: 1.6rem;
+  //}
 }
 
 //......ANIMATION of HEADER HUGE.............//
@@ -76,63 +78,63 @@
 //......HEADER INSIDE THE WEB.............//
 
 .heading-big {
-  font-size: 3.7rem;
+  font-size: 2.75rem;
   color: $color-gray-medium;
   padding-top: 2.8rem;
   text-transform: uppercase;
   text-align: center;
   z-index: 9999;
 
-  @include respond(tab-land) {
-    font-size: 4rem;
-  }
-
-  @include respond(tab-port) {
-    font-size: 3rem;
-  }
-
-  @include respond(phone) {
-    font-size: 2rem;
-  }
+  //@include respond(tab-land) {
+  //  font-size: 4rem;
+  //}
+  //
+  //@include respond(tab-port) {
+  //  font-size: 3rem;
+  //}
+  //
+  //@include respond(phone) {
+  //  font-size: 2rem;
+  //}
 }
 
 .heading-medium {
-  font-size: 3.4rem;
+  font-size: 2.4rem;
   color: $color-gray-medium;
   padding: 2.8rem;
   margin: 2rem;
   text-transform: uppercase;
 
-  @include respond(tab-land) {
-    font-size: 2.75rem;
-  }
-
-  @include respond(tab-port) {
-    font-size: 2rem;
-  }
-
-  @include respond(phone) {
-    font-size: 1.57rem;
-  }
+  //@include respond(tab-land) {
+  //  font-size: 2.75rem;
+  //}
+  //
+  //@include respond(tab-port) {
+  //  font-size: 2rem;
+  //}
+  //
+  //@include respond(phone) {
+  //  font-size: 1.57rem;
+  //}
 }
 
 .heading-small {
-  font-size: 2.5rem;
+  font-size: 2rem;
   color: $color-gray-medium;
   padding: 1.75rem;
   margin-top: 1.75rem;
   text-transform: uppercase;
 
-  @include respond(tab-land) {
-    font-size: 2.1rem;
-  }
-
-  @include respond(tab-port) {
-    font-size: 1.75rem;
-  }
-
-  @include respond(phone) {
-    font-size: 1.4rem;
-  }
+  //@include respond(tab-land) {
+  //  font-size: 2.1rem;
+  //}
+  //
+  //@include respond(tab-port) {
+  //  font-size: 1.75rem;
+  //}
+  //
+  //@include respond(phone) {
+  //  font-size: 1.4rem;
+  //}
 }
 
